# arcana

./: .gitignore  Cargo.toml  LICENSE  README.md  Untitled Diagram.drawio  argosy.toml
airy/: Cargo.toml
airy/proc/: Cargo.toml
airy/src/: game.rs  lib.rs
airy/src/render/: build.rs
bat/: Cargo.toml
bat/src/: lib.rs
bat/src/generic/: buffer.rs  device.rs  feature.rs  format.rs  image.rs  instance.rs  mod.rs  queue.rs
bat/src/vulkan/: device.rs  from.rs  instance.rs  mod.rs  surface.rs
bob/: Cargo.toml
bob/importers/src/: lib.rs
bob/proc/: Cargo.toml
bob/src/: assets.rs  egui.rs  events.rs  funnel.rs  game.rs  lib.rs  window.rs
bob/src/render/: build.rs  mod.rs  render.rs  target.rs
bob/src/shaders/: egui.wgsl
crates/: Cargo.toml  build.json
crates/arcana/: Cargo.toml  _build.rs
crates/arcana/dyn/: Cargo.toml
crates/arcana/impl/: Cargo.toml
crates/arcana/impl/src/: _data.rs  _events.rs  _game.rs  alloc.rs  arena.rs  assets.rs  bundle.rs  code.rs  color_hash.rs  events.rs  flow.rs  game.rs  id.rs  input.rs  lib.rs  model.rs  num2name.rs  plugin.rs  refl.rs  serde_with.rs  stable_hasher.rs  stid.rs  tany.rs  texture.rs  unfold.rs  viewport.rs
crates/arcana/proc/: Cargo.toml
crates/arcana/proc/src/: lib.rs  stable_hasher.rs  stid.rs
crates/arcana/src/: _data.rs  _layout.rs  alloc.rs  arena.rs  assets.rs  base58.rs  bundle.rs  code.rs  egui.rs  events.rs  flow.rs  funnel.rs  game.rs  id.rs  input.rs  lib.rs  model.rs  num2name.rs  plugin.rs  render.rs  stid.rs  tany.rs  task.rs  texture.rs  unfold.rs  viewport.rs  window.rs
crates/arcana/src/app/: mod.rs
crates/arcana/src/assets/: asset.rs  assets.rs  build.rs  error.rs  id.rs  loader.rs  mod.rs
crates/arcana/src/ed/: api.rs  app.rs  code.rs  console.rs  container.rs  data.rs  filters.rs  game.rs  games.rs  inspector.rs  instance.rs  memory.rs  mod.rs  model.rs  monitor.rs  plugins.rs  project.rs  render.rs  sample.rs  systems.rs  tool.rs
crates/arcana/src/hash/: mod.rs  noop.rs  sha2.rs  stable.rs
crates/arcana/src/io/: buffer.rs  mod.rs
crates/arcana/src/render/: mod.rs  render.rs  target.rs  viewport.rs
crates/arcana/src/shaders/: egui.wgsl
crates/arcana/src/work/: graph.rs  job.rs  mod.rs  target.rs
crates/arcn/: Cargo.toml
crates/arcn/src/: lib.rs  main.rs
crates/baked/: Cargo.toml
crates/baked/src/: instance.rs  lib.rs
crates/bob/: Cargo.toml
crates/bob-dyn/: Cargo.toml
crates/bob-dyn/src/: lib.rs
crates/bob/src/: assets.rs  egui.rs  events.rs  game.rs  lib.rs  plugin.rs  texture.rs  window.rs
crates/bob/src/render/: mod.rs  render.rs  target.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/dyn/: Cargo.toml
crates/dyn/src/: lib.rs
crates/ed/: Cargo.toml
crates/ed-api/: Cargo.toml
crates/ed-api/src/: lib.rs
crates/ed/src/: api.rs  app.rs  assets.rs  code.rs  console.rs  container.rs  data.rs  error.rs  filters.rs  game.rs  games.rs  instance.rs  lib.rs  main.rs  model.rs  plugins.rs  project.rs  render.rs  sample.rs  subprocess.rs  systems.rs  tool.rs  workgraph.rs
crates/ed/src/ide/: mod.rs  vscode.rs
crates/ed/src/shaders/: sample.wgsl
crates/ed/src/store/: Cargo.toml  content_address.rs  importer.rs  meta.rs  mod.rs  store.rs  temp.rs
crates/ed/src/tools/: mod.rs
crates/ed/src/ui/: events.rs  mod.rs  render.rs  selector.rs
crates/importers/: Cargo.toml
crates/importers/src/: lib.rs
crates/launcher/: Cargo.toml
crates/launcher/cli/: Cargo.toml
crates/launcher/cli/src/: lib.rs  main.rs
crates/launcher/gui/: Cargo.toml
crates/launcher/gui/src/: main.rs
crates/launcher/src/: app.rs  cli.rs  lib.rs  main.rs  mod.rs
crates/mev/: Cargo.toml
crates/mev/proc/: Cargo.toml
crates/mev/proc/src/: args.rs  constants.rs  lib.rs  repr.rs
crates/mev/src/: lib.rs  traits.rs
crates/mev/src/generic/: acst.rs  arguments.rs  buffer.rs  compute_pipeline.rs  data.rs  feature.rs  format.rs  image.rs  instance.rs  mod.rs  queue.rs  render.rs  render_pipeline.rs  sampler.rs  shader.rs  surface.rs
crates/mev/src/metal/: acst.rs  argument.rs  arguments.rs  from.rs  (+12 more)
crates/names/: Cargo.toml
crates/names/src/: ident.rs  intern.rs  lib.rs  name.rs
crates/nix/: Cargo.toml
crates/nix/src/: lib.rs  traits.rs
crates/plugins/arcanoid/: Cargo.toml
crates/plugins/breaker/: Cargo.toml
crates/plugins/camera/: Cargo.toml
crates/plugins/cursor/: Cargo.toml
crates/plugins/dummy/: Cargo.toml
crates/plugins/egui/: Cargo.toml
crates/plugins/image/: Cargo.toml
crates/plugins/images/: Cargo.toml
crates/plugins/input/: Cargo.toml
crates/plugins/motion/: Cargo.toml
crates/plugins/physics/: Cargo.toml
crates/plugins/scene/: Cargo.toml
crates/plugins/sdf/: Cargo.toml
crates/plugins/square/: Cargo.toml
crates/plugins/triangle/: Cargo.toml
crates/proc/: Cargo.toml
crates/proc/src/: filter.rs  importer.rs  init.rs  job.rs  lib.rs  plugin.rs  stid.rs  system.rs
crates/project/: Cargo.toml
crates/project/src/: dependency.rs  generator.rs  ident.rs  lib.rs  manifest.rs  path.rs  plugin.rs  wrapper.rs
crates/shim/: Cargo.toml
crates/start/: Cargo.toml
crates/start/src/: gui.rs  lib.rs  main.rs
engine/: Cargo.toml
engine/src/: events.rs  funnel.rs  game.rs  lib.rs  window.rs
examples/platformer/: Cargo.toml
examples/platformer/src/: main.rs
joke/: Cargo.toml
joke/src/: lib.rs
nix/: Cargo.toml
nix/proc/: Cargo.toml
nix/proc/src/: lib.rs
nix/src/: lib.rs  traits.rs
nix/src/generic/: _arguments.rs  arguments.rs  buffer.rs  constants.rs  feature.rs  format.rs  image.rs  instance.rs  mod.rs  queue.rs  render.rs  render_pipeline.rs  sampler.rs  shader.rs  stages.rs  surface.rs
nix/src/metal/: buffer.rs  command.rs  device.rs  from.rs  image.rs  instance.rs  mod.rs  queue.rs  render_pipeline.rs  shader.rs  surface.rs
nix/src/vulkan/: arguments.rs  buffer.rs  command.rs  device.rs  from.rs  image.rs  instance.rs  layout.rs  mod.rs  queue.rs  render_pipeline.rs  sampler.rs  shader.rs  surface.rs
owl/: Cargo.toml
owl/proc/: Cargo.toml
owl/src/: events.rs  game.rs  lib.rs  window.rs
(+127 files in other folders)
