[workspace]
members = ["bob", "ed", "examples/platformer"]

[workspace.package]
edition = "2021"
authors = ["me"]
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.0", features = ["rt", "time"], default-features = false }
serde = "1.0"
futures = "0.3"
flume = "0.10"
parking_lot = "0.12"
hashbrown = { version = "0.13", features = ["nightly"] }
tracing = "0.1"
