[package]
name = "bat"
version = "0.1.0"
edition = "2021"

[dependencies]
hidden-trait = "0.1"
bitflags = "1.2"
slab = "0.4"
raw-window-handle = "0.5"
tracing = "0.1"
parking_lot = "0.12"

[target.'cfg(any(windows, all(unix, not(any(target_os = "macos", target_os = "ios")))))'.dependencies]
ash = { version = "0.37.0", features = ["loaded"] }
gpu-alloc = { version = "0.5" }
gpu-alloc-ash = { version = "0.5" }
gpu-descriptor = { version = "0.2" }
gpu-descriptor-ash = { version = "0.2" }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
metal = { version = "0.24.0" }
