[package]
name = "bob"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["bob-proc"]

# Enables multi-threaded runtime for tokio.
tokio-multi-thread = ["tokio/rt-multi-thread"]

# Adds support for windowing.
windowing = ["winit"]

# Adds support for graphics output.
graphics = ["windowing", "nix"]

# Adds support for audio output.
audio = []

# Adds support for user-input.
input = ["winit"]

# Adds support for gamepads.
gamepad = ["gilrs", "input"]

[dependencies]
# Procedural macros
bob-proc = { path = "proc", optional = true }

# Instance
nix = { path = "../nix", optional = true }

# Asset management
# joke = { path = "../joke" }

# Memory allocator
blink-alloc = { version = "0.2.5", features = ["nightly"] }

# ECS
edict = { version = "0.4.0-rc.3", features = ["rayon"], path = "../../edict" }

# Time
gametime = "0.1.6"

# Logging
tracing = { workspace = true } 
tracing-error = "0.2.0"

# Math
na = { package = "nalgebra", version = "0.32" }

# Channels
flume = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true }

# Windowing and events
winit = { version = "0.28", optional = true, git = "https://github.com/rust-windowing/winit.git", branch = "new-keyboard-v3" }
gilrs = { version = "0.10", optional = true }

# Containers
hashbrown = { workspace = true }
