[workspace]
members = [
    "project",
    "arcana",
    "ed",
    "launcher/cli",
    "launcher/gui",
    "plugins/*",
    "names",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["me"]
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
ahash = { version = "0.8" }
alkahest = { version = "0.3", features = ["derive"] }
# amity = { git = "https://github.com/zakarumych/amity.git" }
amity = { version = "0.2" }
approx = { version = "0.5" }
arboard = { version = "3.4" }
argosy = { path = "../../argosy" }
argosy-store = { path = "../../argosy/store" }
base64 = "0.22"
bincode = "1.3"
bitflags = "2.0"
bit-vec = { version = "0.6" }
blink-alloc = { version = "0.3.1", features = ["nightly"] }
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
camino = "1.1"
cargo_toml = "0.20"
cint = "0.3"
clap = { version = "4.3", features = ["derive"] }
codespan-reporting = "0.11"
const-random = "0.1"
core-graphics-types = { version = "0.1" }
cursor-icon = { version = "1.0" }
denvars = { version = "0.3.2" }
dirs = { version = "5" }
dunce = "1"
# edict = { version = "0.5", features = [
#     "rayon",
# ], git = "http://github.com/zakarumych/edict" }

edict = { version = "0.6", path = "../../edict", features = ["serde"] }
egui = { version = "0.27", features = ["bytemuck", "serde", "cint"] }
egui_dnd = { version = "0.8" }
egui_dock = { version = "0.12" }
egui_file = { version = "0.17" }
egui-phosphor = { version = "0.5" }
egui-probe = { path = "../../egui-probe" }
egui-snarl = { path = "../../egui-snarl" }
egui_tracing = { version = "0.2.2" }
eframe = { version = "0.27" }
flume = "0.11"
figa = { version = "0.3" }
futures = "0.3"
# gametime = "0.5"
gametime = { path = "../../gametime" }
gilrs = { version = "0.10" }
gpu-alloc = { version = "0.6" }
hashbrown = { version = "=0.14", features = ["nightly", "serde"] }
hidden-trait = "0.1"
libloading = "0.8"
#mev = { git = "https://github.com/zakarumych/mev.git" }
mev = { path = "../../mev" }
miette = "7.0"
na = { package = "nalgebra", version = "0.32", features = ["libm", "serde-serialize"] }
naga = { version = "0.20", features = ["spv-in", "wgsl-in", "glsl-in"] }
nucleo = { version = "0.5" }
open = { version = "5.0" }
ordered-float = { version = "4.2" }
palette = { version = "0.7", features = ["serializing"] }
parking_lot = "0.12"
percent-encoding = "2.3"
proc-macro2 = "1"
rand = "0.8"
rapid-qoi = "0.6"
rapier2d = "0.20"
rapier3d = "0.20"
proc-easy = "0.3"
parry2d = "0.15"
parry3d = "0.15"
quote = "1"
raw-window-handle = "0.6"
relevant = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde-nothing = "0.1"
sha2 = "0.10"
slab = "0.4"
smallvec = "1.6"
simba = { version = "0.8" }
syn = "2"
thiserror = "1"
tiny-fn = { version = "0.1.6" }
tokio = { version = "1", features = [
    "rt",
    "time",
    "net",
    "io-util",
], default-features = false }
toml = "0.8"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-ident = "1"
uuid = { version = "1.6" }
winit = { version = "0.30" }

[profile.dev.package.ahash]
opt-level = 3

[profile.dev.package.rapier2d]
opt-level = 3

[profile.dev.package.rapier3d]
opt-level = 3

[profile.dev.package.parry2d]
opt-level = 3

[profile.dev.package.parry3d]
opt-level = 3

[profile.dev.package.nalgebra]
opt-level = 3

[profile.dev.package.hashbrown]
opt-level = 3

[profile.dev.package.metal]
opt-level = 3

[profile.dev.package.ash]
opt-level = 3
