[package]
name = "nothing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
derive = ["engine-proc"]
tokio-multi-thread = ["tokio/rt-multi-thread"]


# Adds support for windowing.
windowing = ["winit"]

# Adds support for graphics output.
graphics = ["windowing"]

# Adds support for audio output.
audio = []

# Adds support for user-input.
input = ["winit"]

# Adds support for gamepads.
gamepad = ["gilrs", "input"]

[dependencies]
# Procedural macros
engine-proc = { path = "../engine-proc", optional = true }

# ECS
edict = "0.3.3"

# Time
gametime = "0.1.6"

# Logging
tracing = "0.1.29"
tracing-error = "0.2.0"

# Math
na = { package = "nalgebra", version = "0.32" }

# Channels
flume = "0.10"

# Concurrency
parking_lot = "0.12"

# Async
futures = "0.3"
tokio = { version = "1.0", features = ["rt", "time"], default-features = false }

# Windowing and events
winit = { version = "0.28", optional = true, git = "https://github.com/rust-windowing/winit.git", branch = "new-keyboard-v3" }
gilrs = { version = "0.10", optional = true }