[package]
name = "joke"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
futures = { workspace = true }
flume = { workspace = true }
parking_lot = { workspace = true }
hashbrown = { workspace = true }