[package]
name = "arcana"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Engine"

[features]
dynamic = ["dep:arcana-dyn"]

[dependencies]
arcana-impl = { path = "impl" }
arcana-dyn = { path = "dyn", optional = true }
