[package]
name = "arcana"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Engine Runtime"

[lib]
crate-type = ["rlib", "dylib"]

[features]
# Inline more functions
inline-more = []

[dependencies]
arcana-importers = { path = "../importers" }
arcana-names = { path = "../names" }
arcana-proc = { path = "../proc" }
arcana-project = { path = "../project" }

ahash.workspace = true
amity.workspace = true
approx.workspace = true
base64.workspace = true
basis-universal.workspace = true
blink-alloc.workspace = true
bit-vec.workspace = true
bytemuck.workspace = true
cint.workspace = true
const-random.workspace = true
ctor.workspace = true
dirs.workspace = true
edict.workspace = true
egui = { workspace = true }
egui-probe = { workspace = true }
flume.workspace = true
futures.workspace = true
gametime.workspace = true
gilrs.workspace = true
hashbrown.workspace = true
linkme.workspace = true
mev.workspace = true
na.workspace = true
ordered-float.workspace = true
palette.workspace = true
parking_lot.workspace = true
rand.workspace = true
serde.workspace = true
slab.workspace = true
smallvec.workspace = true
sha2.workspace = true
simba.workspace = true
thiserror.workspace = true
tiny-fn.workspace = true
tokio.workspace = true
tracing.workspace = true
winit.workspace = true
