[package]
name = "bob"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true

[lib]
crate-type = ["dylib"]

[features]
derive = ["dep:bob-proc"]

# Enables multi-threaded runtime for tokio.
multi-thread = ["tokio/rt-multi-thread"]

# Adds game client modules
client = ["dep:winit", "dep:nix", "dep:egui", "dep:egui-winit", "dep:gilrs"]

[dependencies]
# Procedural macros
bob-proc = { path = "../proc", optional = true }

# Asset importers
bob-importers = { path = "../importers", optional = true }

# Instance
nix = { path = "../nix", optional = true }

# Asset management
# joke = { path = "../joke" }

# Memory allocator
blink-alloc = { version = "0.3.0", features = ["nightly"] }

# ECS
edict = { version = "0.5.0", features = ["rayon"] }

# Time
gametime = "0.1.6"

# Logging
tracing = { workspace = true } 
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math
na = { package = "nalgebra", version = "0.32" }

# Channels
flume = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Async
futures = { workspace = true }
tokio = { workspace = true }

# Windowing and events
# winit = { version = "0.28", optional = true, git = "https://github.com/rust-windowing/winit.git", branch = "new-keyboard-v3" }
winit = { version = "0.28", optional = true }
gilrs = { version = "0.10", optional = true }

# Containers
hashbrown = { workspace = true }

# GUI
egui = { version = "0.21", optional = true, features = ["bytemuck"] }
egui-winit = { version = "0.21", optional = true } 

# Fun with bytes
bytemuck = { version = "1.7", features = ["derive"] }

# asset loading
argosy = { path = "../../../argosy" }
argosy-store = { path = "../../../argosy/store" }

rapid-qoi = "0.6"
libloading = "0.8"
thiserror = "1.0"
cargo_toml = "0.15"
sha2 = "0.10"
base64 = "0.21"
