[package]
name = "ed-api"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true

[features]

[dependencies]
bob = { path = "../bob", features = ["derive", "client"] }
alkahest = { version = "0.3", features = ["derive"] }
flume = "0.10"