[package]
name = "ed"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ed-api = { path = "../ed-api" }
bob = { path = "../bob", features = ["derive", "client"] }
egui = "0.21"
rfd = "0.11"
thiserror = "1.0"
toml = "0.7"
cargo_toml = "0.15"
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
dunce = "1.0"
parking_lot = "0.12"
tracing = "0.1"
hashbrown = "0.13"
miette = "5.9"
clap = { version = "4.3", features = ["derive"] }
rand = "0.8"