[package]
name = "arcana-editor"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Engine Editor"

[dependencies]
arcana = { path = "../arcana", features = ["client", "server"] }
arcana-project = { path = "../project" }
arcana-egui = { path = "../plugins/egui" }
dirs = { workspace = true }
egui = { workspace = true }
egui_dnd = { workspace = true }
egui_dock = { workspace = true, features = ["serde"] }
egui-phosphor = { workspace = true }
egui_tracing = { workspace = true }
egui-winit = { workspace = true }
hashbrown = { workspace = true }
libloading = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
parking_lot = { workspace = true }
rand = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true, features = ["serde"] }
