[package]
name = "arcana-launcher"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Launcher library"

[dependencies]
arcana-names = { path = "../names" }
arcana-project = { path = "../project" }
camino = { workspace = true, features = ["serde1"] }
denvars = { workspace = true, features = ["toml"] }
dirs.workspace = true
figa = { workspace = true, features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
tracing.workspace = true
