[package]
name = "arcana-names"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Library for interning names and idents"

[dependencies]
ahash.workspace = true
hashbrown.workspace = true
parking_lot.workspace = true
serde.workspace = true
unicode-ident.workspace = true
