[package]
name = "arcana-project"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Project library"

[dependencies]
cargo_toml = { workspace = true }
dunce = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
