[package]
name = "arcana-project"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Project library"

[dependencies]
arcana-names = { path = "../names" }

ahash.workspace = true
camino = { workspace = true, features = ["serde1"] }
cargo_toml.workspace = true
dirs.workspace = true
hashbrown.workspace = true
miette.workspace = true
parking_lot.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
