[package]
name = "arcana-start"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Engine launcher"

[[bin]]
name = "Arcana"
path = "src/gui.rs"
required-features = ["arcana/app"]

[[bin]]
name = "arcn"
path = "src/main.rs"

[dependencies]
arcana = { path = "../arcana", optional = true }
arcana-project = { path = "../project" }
camino = { workspace = true }
clap = { workspace = true }
denvars = { workspace = true, features = ["toml"] }
dirs = { workspace = true }
dunce = { workspace = true }
figa = { workspace = true, features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-error = { workspace = true }
winit = { workspace = true }
