[package]
name = "platformer"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bob = { path = "../../bob", features = ["derive", "gamepad", "graphics", "tokio-multi-thread"] }
tokio = { workspace = true }
