[package]
name = "platformer"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bob = { path = "../../bob", features = ["derive", "gamepad", "graphics"] }
tokio = { workspace = true }
bytemuck = "1.0"

ash = { version = "0.37.0", features = ["loaded"] }
