[package]
name = "arcana-impl"
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
version.workspace = true
description = "Arcana Engine"

[dependencies]
arcana-proc = { path = "../proc" }
arcana-project = { path = "../../project" }
arcana-importers = { path = "../../importers" }
mev = { path = "../../mev" }

ahash = { workspace = true }
approx = { workspace = true }
argosy = { workspace = true }
argosy-store = { workspace = true }
base64 = { workspace = true }
blink-alloc = { workspace = true }
bit-vec = { workspace = true }
bytemuck = { workspace = true }
const-random = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
edict = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
gametime = { workspace = true }
gilrs = { workspace = true }
hashbrown = { workspace = true, features = ["serde"] }
na = { workspace = true, features = ["libm"] }
parking_lot = { workspace = true }
rand = { workspace = true }
rapid-qoi = { workspace = true }
serde = { workspace = true, features = ["derive"] }
slab = { workspace = true }
sha2 = { workspace = true }
simba = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
winit = { workspace = true }
